--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header id="site_head"></header>
+    <header id="site_head">
+        <div class="container">
+            <!--navbar-->
+            <nav class="navbar">
+                <div class="leftnav">
+                    <div class="logo">
+                        <img src="./img/logo-small.png" alt="dropboxlogo">
+                    </div>
+                    <div class="leftlinks">
+                        <span><a href="#">Perchè Dropbox</a></span>
+                        <span><a href="#">Funzioni</a></span>
+                        <span><a href="#">Piani e Prezzi</a></span>
+                    </div>
+                </div>
+                <div class="rightbar">
+                    <div class="rightlinks">
+                        <span><a href="#">Supporto</a></span>
+                        <span><a href="#">Contatta l'ufficio vendite</a></span>
+                        <span><a href="#">Accedi</a></span>
+                        <span class="button"><a href="#">Inizia</a></span>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
     <main id="site_main"></main>
     <footer id="site_foot"></footer>
 </body>
 </html>
+                    
