--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header id="site_head">
-        <div class="container">
+        <div class="head_container">
             <!--navbar-->
             <nav class="navbar">
                 <div class="leftnav">
@@ -32,7 +35,33 @@
             </nav>
         </div>
     </header>
-    <main id="site_main"></main>
+    <main id="site_main">
+        <section class="jumbo">
+            <!--jumbotron-->
+            <div class="container">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="row">
+                    <div class="col2">
+                        <div class="freetrial">
+                            <p>
+                                Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è
+                                più di uno spazio di archiviazione sicuro: è un modo inteligente e integrato per ottimizzare il flusso di lavoro
+                                esistente
+                            </p>
+                            <span class="button"><a href="#">Inizia ora la prova gratuita</a></span>
+                            <p>
+                                Annulla in qualsiasi momento
+                            </p>
+                            <span><a href="#"><i class="fa-solid fa-arrow-down"></i></a></i></span>
+                        </div>
+                    </div>
+                    <div class="col8">
+                        <img src="/img/jumbo.png" alt="dropbox_jumbo_img">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer id="site_foot"></footer>
 </body>
 </html>
