--- a/index.html
+++ b/index.html
@@ -61,6 +61,39 @@
                 </div>
             </div>
         </section>
+        <section class="businessplan">
+            <div class="container">
+                <h2>Trova il piano business che fa per te</h2>
+                <div class="facture_btn">
+                    <span><input type="radio">Fatturazione Mensile</span>
+                    <span><input type="radio">Fatturazione Annuale</span>
+                </div>
+                <div class="row">
+                    <div class="col3">
+                        <div class="single">
+                            <span><i class="fa-solid fa-user"></i>Singolo</span>
+                            <div class="sub_type">
+                                <h5>Professional</h5>
+                                <span class="price">&euro; 12.00</span>
+                                <span class="month">/mese</span>
+                            </div>
+                            <div class="sub_detail">
+                                <span><i class="fa-solid fa-user"></i>1 Utente</span>
+                                <span><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</span>
+                                <span><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                <span class="button">Prova gratis per 30 giorni</span>
+                                <span>oppure<span class="bluetext">acquista ora</span></span>
+                            </div>
+                            <div class="sub_recap">
+                                <h5>Punti salienti del piano</h5>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Invia fino a 100GB con Dropbox Transfert</span>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Cartelle offline su dispositivi mobile</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer id="site_foot"></footer>
 </body>
