--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                     <div class="col2">
                         <div class="freetrial">
                             <p>
-                                Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è
-                                più di uno spazio di archiviazione sicuro: è un modo inteligente e integrato per ottimizzare il flusso di lavoro
+                                Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
+                                posto. Dropbox Business è
+                                più di uno spazio di archiviazione sicuro: è un modo inteligente e integrato per ottimizzare il
+                                flusso di lavoro
                                 esistente
                             </p>
                             <span class="button"><a href="#">Inizia ora la prova gratuita</a></span>
@@ -62,6 +64,7 @@
             </div>
         </section>
         <section class="businessplan">
+            <!--plan-->
             <div class="container">
                 <h2>Trova il piano business che fa per te</h2>
                 <div class="facture_btn">
@@ -70,6 +73,7 @@
                 </div>
                 <div class="row">
                     <div class="col3">
+                        <!--single-->
                         <div class="single">
                             <span><i class="fa-solid fa-user"></i>Singolo</span>
                             <div class="sub_type">
@@ -80,14 +84,67 @@
                             <div class="sub_detail">
                                 <span><i class="fa-solid fa-user"></i>1 Utente</span>
                                 <span><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</span>
-                                <span><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                <span><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione
+                                    file semplice e sicura</span>
                                 <span class="button">Prova gratis per 30 giorni</span>
                                 <span>oppure<span class="bluetext">acquista ora</span></span>
                             </div>
                             <div class="sub_recap">
                                 <h5>Punti salienti del piano</h5>
-                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Invia fino a 100GB con Dropbox Transfert</span>
-                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Cartelle offline su dispositivi mobile</span>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Invia fino a 100GB con Dropbox
+                                    Transfert</span>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Cartelle offline su dispositivi
+                                    mobile</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col3">
+                        <!--team-->
+                        <div class="team">
+                            <span><i class="fa-solid fa-users"></i>Team</span>
+                            <div class="sub_type">
+                                <h5>Advanced</h5>
+                                <span class="price">&euro; 18.00</span>
+                                <span class="month">/utente/mese</span>
+                            </div>
+                            <div class="sub_detail">
+                                <span><i class="fa-solid fa-users"></i>3 o più Utenti</span>
+                                <span><i class="fa-solid fa-folder"></i>Tutto lo spazio di cui ha bisogno il tuo team</span>
+                                <span><i class="fa-solid fa-share-nodes"></i>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span>
+                                <span class="button">Prova gratis per 30 giorni</span>
+                                <span>oppure<span class="bluetext">acquista ora</span></span>
+                            </div>
+                            <div class="sub_recap">
+                                <h5>Punti salienti del piano</h5>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Nessun limite di spazio per i file</span>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Cartelle offline su dispositivi
+                                    mobile</span>
+                                    <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Risparmio del 50% rispetto alle iscrizioni singole</span>
+                                        <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Possibilità di inserire nuovi membri del team</span>
+                                        <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Gestione dei permessi in base ai ruoli</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col3">
+                        <!--company-->
+                        <div class="company">
+                            <span><i class="fa-solid fa-user"></i>Singolo</span>
+                            <div class="sub_type">
+                                <h5>Enterprise</h5>
+                                <span class="price">&euro; Contattaci</span>
+                            </div>
+                            <div class="sub_detail">
+                                <span><i class="fa-solid fa-user"></i>10 o più Utenti</span>
+                                <span><i class="fa-solid fa-folder"></i>Soluzioni personalizzabili per la tua azienda</span>
+                                <span><i class="fa-solid fa-share-nodes"></i>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span>
+                                <span class="button">Contattaci</span>
+                                <span>oppure<span class="bluetext">acquista ora</span></span>
+                            </div>
+                            <div class="sub_recap">
+                                <h5>Punti salienti del piano</h5>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>ICartelle offline su dispositivi mobile</span>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Servizio assistenza H24</span>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Possibilità di personalizzazione totale</span>
                             </div>
                         </div>
                     </div>
