added enterprise details + starting partner session

--- a/index.html
+++ b/index.html
@@ -149,6 +149,34 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col12">
+                        <!--enterprise-->
+                        <div class="enterprise">
+                            <div class="enterprise_top">
+                                <span><i class="fa-solid fa-building"></i>Team</span>
+                            </div>
+                            <div class="enterprise_detail">
+                                <div class="left_enterprise">
+                                    <span>Enterprise</span>
+                                    <span>Contatta l'ufficio vendite per i prezzi</span>
+                                    <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su <word-break>qualsiasi scala</word-break></p>
+                                </div>
+                                <div class="right_enterprise">
+                                    <span class="button">Contatta l'ufficio vendite</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="partner">
+            <div class="container">
+                <div class="row">
+                    <!--partner-->
+                    <div class="col6"></div>
+                </div>
             </div>
         </section>
     </main>
