add partner section

--- a/index.html
+++ b/index.html
@@ -175,7 +175,18 @@
             <div class="container">
                 <div class="row">
                     <!--partner-->
-                    <div class="col6"></div>
+                    <div class="col6">
+                        <div class="partner_img"><img src="./img/partner.png" alt="worl_partner"></div>
+                    </div>
+                    <div class="col4">
+                        <div class="partner_text">
+                            <h3>Entra in contatto con un partner Dropbox</h3>
+                            <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui</p>
+                        </div>
+                        <div class="partner_btn">
+                            <span class="button">Trova un partner</span>
+                        </div>  
+                    </div>
                 </div>
             </div>
         </section>
