--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <span><input type="radio">Fatturazione Annuale</span>
                 </div>
                 <div class="row">
-                    <div class="col3">
+                    <div class="col3_bordered">
                         <!--single-->
                         <div class="single">
                             <span><i class="fa-solid fa-user"></i>Singolo</span>
@@ -98,7 +98,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col3">
+                    <div class="col3_bordered">
                         <!--team-->
                         <div class="team">
                             <span><i class="fa-solid fa-users"></i>Team</span>
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col3">
+                    <div class="col3_bordered">
                         <!--company-->
                         <div class="company">
                             <span><i class="fa-solid fa-user"></i>Singolo</span>
@@ -186,6 +186,70 @@
                         <div class="partner_btn">
                             <span class="button">Trova un partner</span>
                         </div>  
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="dropbox_operation">
+            <div class="container">
+                <!--operations-->
+                <h2>Esegui più operazioni con Dropbox Business</h2>
+                <div class="row">
+                    <div class="col3">
+                        <div class="operations">
+                            <img src="./img/business-feature-switching-tools.png" alt="tool_switch">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da
+                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper direttamente da Dropbox
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col3">
+                        <div class="operations">
+                            <img src="./img/business-feature-send-files-it.png" alt="send_files">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da
+                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper direttamente da Dropbox
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col3">
+                        <div class="operations">
+                            <img src="./img/business-feature-security.png" alt="security">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da
+                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper direttamente da Dropbox
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col3">
+                        <div class="operations">
+                            <img src="./img/business-feature-multi-device.png" alt="multiple_device">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da
+                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper direttamente da Dropbox
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col3">
+                        <div class="operations">
+                            <img src="./img/business-feature-integrations-it.png" alt="integrations">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da
+                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper direttamente da Dropbox
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col3">
+                        <div class="operations">
+                            <img src="./img/business-feature-coordinate-it.png" alt="business_coordinate">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da
+                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper direttamente da Dropbox
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
