--- a/index.html
+++ b/index.html
@@ -254,8 +254,65 @@
                 </div>
             </div>
         </section>
+        <section class="more">
+            <div class="container">
+                <div class="more">
+                    <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                    <p class="bluetext">Scopri di più sui nostri clienti</p>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer id="site_foot"></footer>
+    <footer id="site_foot">
+        <div class="container">
+            <div class="footer_lists">
+                <ul>
+                    <li class="list_name">Dropbox</li>
+                    <li class="list_link"><a href="#">Applicazione Desktop</a></li>
+                    <li class="list_link"><a href="#">Perchè Dropbox</a></li>
+                    <li class="list_link"><a href="#">Piani</a></li>
+                    <li class="list_link"><a href="#">Sicurezza</a></li>
+                    <li class="list_link"><a href="#">Funzioni</a></li>
+                </ul>
+                <ul>
+                    <li class="list_name">Prodotti</li>
+                    <li class="list_link"><a href="#">Applicazione Desktop</a></li>
+                    <li class="list_link"><a href="#">Perchè Dropbox</a></li>
+                    <li class="list_link"><a href="#">Piani</a></li>
+                    <li class="list_link"><a href="#">Sicurezza</a></li>
+                    <li class="list_link"><a href="#">Funzioni</a></li>
+                </ul>
+                <ul>
+                    <li class="list_name">Azienda</li>
+                    <li class="list_link"><a href="#">Applicazione Desktop</a></li>
+                    <li class="list_link"><a href="#">Perchè Dropbox</a></li>
+                    <li class="list_link"><a href="#">Piani</a></li>
+                    <li class="list_link"><a href="#">Sicurezza</a></li>
+                    <li class="list_link"><a href="#">Funzioni</a></li>
+                </ul>
+                <ul>
+                    <li class="list_name">Supporto</li>
+                    <li class="list_link"><a href="#">Applicazione Desktop</a></li>
+                    <li class="list_link"><a href="#">Perchè Dropbox</a></li>
+                    <li class="list_link"><a href="#">Piani</a></li>
+                    <li class="list_link"><a href="#">Sicurezza</a></li>
+                    <li class="list_link"><a href="#">Funzioni</a></li>
+                </ul>
+                <ul>
+                    <li class="list_name">Community</li>
+                    <li class="list_link"><a href="#">Applicazione Desktop</a></li>
+                    <li class="list_link"><a href="#">Perchè Dropbox</a></li>
+                    <li class="list_link"><a href="#">Piani</a></li>
+                    <li class="list_link"><a href="#">Sicurezza</a></li>
+                    <li class="list_link"><a href="#">Funzioni</a></li>
+                </ul>
+            </div>
+            <div class="site_language">
+                <i class="fa-solid fa-earth-americas"></i>
+                <span>Italiano&triangle;</span>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
                     
