add click for go to section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header id="site_head">
         <div class="head_container">
@@ -19,9 +21,9 @@
                         <img src="./img/logo-small.png" alt="dropboxlogo">
                     </div>
                     <div class="leftlinks">
-                        <span><a href="#">Perchè Dropbox</a></span>
-                        <span><a href="#">Funzioni</a></span>
-                        <span><a href="#">Piani e Prezzi</a></span>
+                        <span><a href="#jumbo">Perchè Dropbox</a></span>
+                        <span><a href="#dropbox_operation">Funzioni</a></span>
+                        <span><a href="#businessplan">Piani e Prezzi</a></span>
                     </div>
                 </div>
                 <div class="rightbar">
@@ -36,7 +38,7 @@
         </div>
     </header>
     <main id="site_main">
-        <section class="jumbo">
+        <section id="jumbo">
             <!--jumbotron-->
             <div class="container">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
@@ -44,9 +46,11 @@
                     <div class="col2">
                         <div class="freetrial">
                             <p>
-                                Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
+                                Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo
+                                stesso
                                 posto. Dropbox Business è
-                                più di uno spazio di archiviazione sicuro: è un modo inteligente e integrato per ottimizzare il
+                                più di uno spazio di archiviazione sicuro: è un modo inteligente e integrato per
+                                ottimizzare il
                                 flusso di lavoro
                                 esistente
                             </p>
@@ -57,13 +61,13 @@
                             <span><a href="#"><i class="fa-solid fa-arrow-down"></i></a></i></span>
                         </div>
                     </div>
-                    <div class="col8">
+                    <div class="col10">
                         <img src="/img/jumbo.png" alt="dropbox_jumbo_img">
                     </div>
                 </div>
             </div>
         </section>
-        <section class="businessplan">
+        <section id="businessplan">
             <!--plan-->
             <div class="container">
                 <h2>Trova il piano business che fa per te</h2>
@@ -84,16 +88,19 @@
                             <div class="sub_detail">
                                 <span><i class="fa-solid fa-user"></i>1 Utente</span>
                                 <span><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</span>
-                                <span><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione
+                                <span><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e
+                                    condivisione
                                     file semplice e sicura</span>
                                 <span class="button">Prova gratis per 30 giorni</span>
-                                <span>oppure<span class="bluetext">acquista ora</span></span>
+                                <span>oppure<span class="bluetext"><a href="#">acquista ora</a></span></span>
                             </div>
                             <div class="sub_recap">
                                 <h5>Punti salienti del piano</h5>
-                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Invia fino a 100GB con Dropbox
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Invia fino a 100GB con
+                                    Dropbox
                                     Transfert</span>
-                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Cartelle offline su dispositivi
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Cartelle offline su
+                                    dispositivi
                                     mobile</span>
                             </div>
                         </div>
@@ -109,19 +116,26 @@
                             </div>
                             <div class="sub_detail">
                                 <span><i class="fa-solid fa-users"></i>3 o più Utenti</span>
-                                <span><i class="fa-solid fa-folder"></i>Tutto lo spazio di cui ha bisogno il tuo team</span>
-                                <span><i class="fa-solid fa-share-nodes"></i>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span>
+                                <span><i class="fa-solid fa-folder"></i>Tutto lo spazio di cui ha bisogno il tuo
+                                    team</span>
+                                <span><i class="fa-solid fa-share-nodes"></i>Sofisticate funzioni di controllo e per
+                                    tenere al sicuro tutti i file del tuo team</span>
                                 <span class="button">Prova gratis per 30 giorni</span>
-                                <span>oppure<span class="bluetext">acquista ora</span></span>
+                                <span>oppure<span class="bluetext"><a href="#">acquista ora</a></span></span>
                             </div>
                             <div class="sub_recap">
                                 <h5>Punti salienti del piano</h5>
-                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Nessun limite di spazio per i file</span>
-                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Cartelle offline su dispositivi
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Nessun limite di spazio
+                                    per i file</span>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Cartelle offline su
+                                    dispositivi
                                     mobile</span>
-                                    <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Risparmio del 50% rispetto alle iscrizioni singole</span>
-                                        <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Possibilità di inserire nuovi membri del team</span>
-                                        <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Gestione dei permessi in base ai ruoli</span>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Risparmio del 50%
+                                    rispetto alle iscrizioni singole</span>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Possibilità di inserire
+                                    nuovi membri del team</span>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Gestione dei permessi in
+                                    base ai ruoli</span>
                             </div>
                         </div>
                     </div>
@@ -135,16 +149,21 @@
                             </div>
                             <div class="sub_detail">
                                 <span><i class="fa-solid fa-user"></i>10 o più Utenti</span>
-                                <span><i class="fa-solid fa-folder"></i>Soluzioni personalizzabili per la tua azienda</span>
-                                <span><i class="fa-solid fa-share-nodes"></i>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span>
+                                <span><i class="fa-solid fa-folder"></i>Soluzioni personalizzabili per la tua
+                                    azienda</span>
+                                <span><i class="fa-solid fa-share-nodes"></i>Assistenza personalizzata per aiutare gli
+                                    amministratori in una gestione su larga scala</span>
                                 <span class="button">Contattaci</span>
-                                <span>oppure<span class="bluetext">acquista ora</span></span>
+                                <span>oppure<span class="bluetext"><a href="#">acquista ora</a></span></span>
                             </div>
                             <div class="sub_recap">
                                 <h5>Punti salienti del piano</h5>
-                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>ICartelle offline su dispositivi mobile</span>
-                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Servizio assistenza H24</span>
-                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Possibilità di personalizzazione totale</span>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>ICartelle offline su
+                                    dispositivi mobile</span>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Servizio assistenza
+                                    H24</span>
+                                <span><i class="fa-solid fa-check" style="color: #74C0FC;"></i>Possibilità di
+                                    personalizzazione totale</span>
                             </div>
                         </div>
                     </div>
@@ -160,10 +179,11 @@
                                 <div class="left_enterprise">
                                     <span>Enterprise</span>
                                     <span>Contatta l'ufficio vendite per i prezzi</span>
-                                    <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su <word-break>qualsiasi scala</word-break></p>
+                                    <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT
+                                        nella gestione su qualsiasi scala</p>
                                 </div>
                                 <div class="right_enterprise">
-                                    <span class="button">Contatta l'ufficio vendite</span>
+                                    <span class="button"><a href="#">Contatta l'ufficio vendite</a></span>
                                 </div>
                             </div>
                         </div>
@@ -181,16 +201,18 @@
                     <div class="col4">
                         <div class="partner_text">
                             <h3>Entra in contatto con un partner Dropbox</h3>
-                            <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui</p>
+                            <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni. Ottieni le
+                                soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui
+                                implementazione, integrazione, gestione e supporto continui</p>
                         </div>
                         <div class="partner_btn">
                             <span class="button">Trova un partner</span>
-                        </div>  
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="dropbox_operation">
+        <section id="dropbox_operation">
             <div class="container">
                 <!--operations-->
                 <h2>Esegui più operazioni con Dropbox Business</h2>
@@ -199,8 +221,10 @@
                         <div class="operations">
                             <img src="./img/business-feature-switching-tools.png" alt="tool_switch">
                             <h3>Passa di meno da uno strumento all'altro</h3>
-                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da
-                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper direttamente da Dropbox
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti Cloud da
+                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper
+                                direttamente da Dropbox
                             </p>
                         </div>
                     </div>
@@ -208,8 +232,10 @@
                         <div class="operations">
                             <img src="./img/business-feature-send-files-it.png" alt="send_files">
                             <h3>Passa di meno da uno strumento all'altro</h3>
-                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da
-                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper direttamente da Dropbox
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti Cloud da
+                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper
+                                direttamente da Dropbox
                             </p>
                         </div>
                     </div>
@@ -217,8 +243,10 @@
                         <div class="operations">
                             <img src="./img/business-feature-security.png" alt="security">
                             <h3>Passa di meno da uno strumento all'altro</h3>
-                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da
-                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper direttamente da Dropbox
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti Cloud da
+                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper
+                                direttamente da Dropbox
                             </p>
                         </div>
                     </div>
@@ -228,8 +256,10 @@
                         <div class="operations">
                             <img src="./img/business-feature-multi-device.png" alt="multiple_device">
                             <h3>Passa di meno da uno strumento all'altro</h3>
-                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da
-                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper direttamente da Dropbox
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti Cloud da
+                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper
+                                direttamente da Dropbox
                             </p>
                         </div>
                     </div>
@@ -237,8 +267,10 @@
                         <div class="operations">
                             <img src="./img/business-feature-integrations-it.png" alt="integrations">
                             <h3>Passa di meno da uno strumento all'altro</h3>
-                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da
-                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper direttamente da Dropbox
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti Cloud da
+                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper
+                                direttamente da Dropbox
                             </p>
                         </div>
                     </div>
@@ -246,8 +278,10 @@
                         <div class="operations">
                             <img src="./img/business-feature-coordinate-it.png" alt="business_coordinate">
                             <h3>Passa di meno da uno strumento all'altro</h3>
-                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da
-                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper direttamente da Dropbox
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti Cloud da
+                                Docuumenti, Fogli e Presentazioni di Google, file di Microsof Office e Dropbox Paper
+                                direttamente da Dropbox
                             </p>
                         </div>
                     </div>
@@ -314,5 +348,5 @@
         </div>
     </footer>
 </body>
+
 </html>
-                    
